{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 29,
  "lineage": "02fccff6-c9cb-a5e0-9439-feb6c46a1f80",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ac550b78324f651",
            "arn": "arn:aws:ec2:us-east-1:502207623589:instance/i-060a6750d36765d8c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060a6750d36765d8c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05495d1dcee69d100",
            "private_dns": "ip-30-0-0-197.ec2.internal",
            "private_ip": "30.0.0.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-088f9072e5565639a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba085fb023f7f9e4",
            "tags": {
              "Environment": "sandbox",
              "Name": "Jenkins server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b36ba2a2155ab4a6"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.jenkins",
            "aws_subnet.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0db5ac4fbbd757aea",
            "owner_id": "502207623589",
            "tags": {
              "Environment": "sandbox"
            },
            "vpc_id": "vpc-081857bcb2197db72"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-089f075e4690510c5",
            "owner_id": "502207623589",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db5ac4fbbd757aea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-081857bcb2197db72"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc0d866c1c3432b5",
            "route_table_id": "rtb-089f075e4690510c5",
            "subnet_id": "subnet-0ba085fb023f7f9e4"
          },
          "dependencies": [
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aac1a622bd9d4b0a",
            "route_table_id": "rtb-089f075e4690510c5",
            "subnet_id": "subnet-0d304ed53281ba918"
          },
          "dependencies": [
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502207623589:security-group/sg-0d71d11ec3f05c8b4",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d71d11ec3f05c8b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "3.82.211.83/32"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": null,
            "owner_id": "502207623589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-081857bcb2197db72"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502207623589:security-group/sg-0b36ba2a2155ab4a6",
            "description": "Allow 8080 port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b36ba2a2155ab4a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "125.16.91.5/32",
                  "3.82.211.83/32"
                ],
                "description": "HTTP_22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "125.16.91.5/32"
                ],
                "description": "HTTP_8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Jenkins-sg",
            "name_prefix": null,
            "owner_id": "502207623589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox",
              "Name": "allow_8080_22"
            },
            "timeouts": null,
            "vpc_id": "vpc-081857bcb2197db72"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "3.82.211.83/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-315861206",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d71d11ec3f05c8b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502207623589:subnet/subnet-0ba085fb023f7f9e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "30.0.0.0/24",
            "id": "subnet-0ba085fb023f7f9e4",
            "map_public_ip_on_launch": false,
            "owner_id": "502207623589",
            "tags": {
              "Environment": "sandbox",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-081857bcb2197db72"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502207623589:subnet/subnet-0d304ed53281ba918",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "30.0.1.0/24",
            "id": "subnet-0d304ed53281ba918",
            "map_public_ip_on_launch": false,
            "owner_id": "502207623589",
            "tags": {
              "Environment": "sandbox",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-081857bcb2197db72"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502207623589:vpc/vpc-081857bcb2197db72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-0a3caf41208d8192c",
            "default_route_table_id": "rtb-05311cf0a311698a0",
            "default_security_group_id": "sg-054f1be6d3bdf91c3",
            "dhcp_options_id": "dopt-1d66c167",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-081857bcb2197db72",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05311cf0a311698a0",
            "owner_id": "502207623589",
            "tags": {
              "Environment": "sandbox",
              "kubernetes.io/cluster/terraform-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}